# rag-pipeline

./: .gitignore  README.md  config.template.yaml  config.yaml  pyproject.toml  start_qdrant.sh  streamlit_app.py
dummy_ingest_test/: ingest_me.txt
qdrant_storage/: raft_state.json
qdrant_storage/collections/text_chunks/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/text_chunks/0/segments/0c527b87-b1be-401a-b61c-548ccf200543/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/text_chunks/0/segments/3eae3e88-e05f-49f4-88a1-e8f0d0b48af4/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/text_chunks/0/segments/4e6084ca-a898-4fd8-97ab-5153f380242c/: IDENTITY  LOG  MANIFEST-000005  mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/text_chunks/0/segments/8874d6ae-f372-4998-944e-b98160fadd5c/: IDENTITY  LOG  MANIFEST-000005  mutable_id_tracker.mappings
qdrant_storage/collections/text_chunks/0/segments/89ba726c-cef0-4474-8068-42f29646257f/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/text_chunks/0/segments/cc15a01a-db50-4b6a-ae53-6836c9dca753/: IDENTITY  LOG  MANIFEST-000005
src/: app_logic.py  cli.py  config.py  embeddings.py  llm_interface.py  query.py  reranker.py
src/api/: main.py  models.py
src/database/: core.py  crud.py  models.py
src/evaluation/: deere_eval_set.py
src/ingestion/: chunking.py  loaders.py  pipeline.py
src/ui/: app.py
src/vector_store/: client.py  collections.py  indexing.py  searching.py
(+31 files in other folders)
